hphp/hack/test/typecheck/splat/lambda_regular.php.like_types.exp
File "lambda_regular.php", line 5, characters 9-10:
An array cannot be unpacked into the required arguments of a function (Typing[4359])
File "lambda_regular.php", line 4, characters 8-46:
Definition is here
