hphp/hack/test/typecheck/splat/lambda_regular.php
<?hh

function f((int, float, string) $t): void {
  $f = ($a, $b) ==> { throw new Exception(); };
  $f(...$t);
}
